fix(clash): prevent overflow in deck selection

--- a/clash/components/GameBrowser/GameLobby/GameLobbyPlayer/DeckSelection/DeckSelectionModal/DecksList.module.css
+++ b/clash/components/GameBrowser/GameLobby/GameLobbyPlayer/DeckSelection/DeckSelectionModal/DecksList.module.css
@@ -107,11 +107,6 @@
     height: 16px;
 }
 
-.commander_names {
-    display: flex;
-    flex-direction: column;
-}
-
 .commander_name {
     color: var(--color-text-secondary);
     overflow: hidden;
